[package]
name = "microwfc"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/tudbut/microwfc"
license = "MIT"
description = "Small Wave-Function-Collapse implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
micro_ndarray = "0.2"